--- a/vercel.json
+++ b/vercel.json
@@ -8,8 +8,8 @@
     ],
     "routes": [
       {
-        "src": "/(.*)",
-        "dest": "./server/index.js"
+        "src": "../server/lib/(.*)",
+        "dest": "../server/index.js"
       }
     ]
   }
