--- a/vercel.json
+++ b/vercel.json
@@ -2,14 +2,14 @@
     "version": 2,
     "builds": [
       {
-        "src": "app.js",
+        "src": "../server/index.js",
         "use": "@vercel/node"
       }
     ],
     "routes": [
       {
-        "src": "../server/lib/(.*)",
-        "dest": "../server/index.js"
+        "src": "/(.*)",
+        "dest": "app.js"
       }
     ]
   }
